(?) md-menu-backdrop  z-index fix

--- a/src/components/mdMenu/mdMenu.scss
+++ b/src/components/mdMenu/mdMenu.scss
@@ -116,5 +116,5 @@ $menu-base-width: 56px;
 }
 
 .md-menu-backdrop {
-  z-index: 130;
+  z-index: 12;
 }
